@@ -35,6 +35,7 @@ gbart=function(
                ndpost=1000L, nskip=100L,
                keepevery=c(1L, 10L, 10L)[ntype],
                printevery=100L, transposed=FALSE,
+               keeptestfits = NULL,
                hostname=FALSE,
                mc.cores = 1L, nice = 19L, seed = 99L
                )
@@ -229,7 +230,9 @@ gbart=function(
     ##res$CPO=exp(log.CPO) 
     ##res$LPML=sum(log(CPO))
 
-    if(np>0) {
+    if(length(keeptestfits)==0) keeptestfits <- (np>0)
+    
+    if(keeptestfits) {
         if(type=='wbart')
             res$yhat.test.mean <- apply(res$yhat.test, 2, mean)
         else {
